--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ jdk:
   - openjdk8
 git:
   submodules: true
-script:
+before_script:
   - git submodule update --init --recursive --jobs 7
+  - ./start.sh
+script:
+  - docker-compose up
