--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,13 @@ jdk:
 git:
   submodules: true
 sudo: required
+env:
+  - DOCKER_COMPOSE_VERSION=2
+before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
 before_script:
   - git submodule update --init --recursive --jobs 7
 script:
