--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ git:
   submodules: true
 sudo: required
 env:
-  - DOCKER_COMPOSE_VERSION=2
+  - DOCKER_COMPOSE_VERSION=1.24.0
 before_install:
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
