--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ before_install:
 before_script:
   - git submodule update --init --recursive --jobs 7
 script:
-  - docker-compose up  --build
+  - docker-compose up  --build -d
   - docker-compose down
