--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,6 @@
 [submodule "calculations"]
 	path = calculations
 	url = https://github.com/apmath-web/calculations.git
-[submodule "interest"]
-	path = interest
-	url = https://github.com/apmath-web/interest.git
+[submodule "interests"]
+	path = interests
+	url = https://github.com/apmath-web/interests.git
