Add migration up/down script

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,6 @@ before_script:
 script:
   - docker-compose up  --build -d
   - docker ps -a
+  - docker-compose run migrate
+  - x=`ls sql | wc -l`; while [ $x -gt 0 ]; do docker-compose run migrate down; x=$(($x-1)); done
   - docker-compose down
