--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,9 @@ services:
       - DB_USER=test
       - DB_PASSWORD=test
       - DB_HOST=database
-      - CLIENTS_PORT=8080
+      - DB_PORT=5432
+      - DB_NAME=test
+      - CLIENT_HOST=clients
     networks:
       - bridge
   currency:
@@ -31,6 +33,8 @@ services:
       - DB_USER=test
       - DB_PASSWORD=test
       - DB_HOST=database
+      - DB_PORT=5432
+      - DB_NAME=test
     networks:
       - bridge
   clients:
@@ -45,6 +49,8 @@ services:
       - DB_USER=test
       - DB_PASSWORD=test
       - DB_HOST=database
+      - DB_PORT=5432
+      - DB_NAME=test
     networks:
       - bridge
   migrate:
@@ -63,6 +69,8 @@ services:
     container_name: database
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+    ports:
+      - "6432:5432"
     environment:
       - POSTGRES_ROOT_PASSWORD=test
       - POSTGRES_PASSWORD=test
