--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,22 @@ networks:
   bridge:
     driver: bridge
 services:
+  loans:
+    build:
+      context: ./loans
+    container_name: loans_container
+    depends_on:
+      - db
+      - clients
+    ports:
+      - "8083:8080"
+    environment:
+      - DB_USER=test
+      - DB_PASSWORD=test
+      - DB_HOST=database
+      - CLIENTS_PORT=8080
+    networks:
+      - bridge
   expenses:
     build:
       context: ./expenses
