--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - DB_PASSWORD=test
       - DB_HOST=database
       - CLIENTS_PORT=8080
+      - APPLICATIONS_PORT=8084
+      - CALCULATIONS_PORT=8085
     networks:
       - bridge
   expenses:
