--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,14 @@ networks:
   bridge:
     driver: bridge
 services:
+  applications:
+    build:
+      context: ./applications
+    container_name: applications
+    ports:
+      - "8084:8080"
+    networks:
+      - bridge
   calculations:
     build:
       context: ./calculations
@@ -18,7 +26,7 @@ services:
     depends_on:
       - db
       - clients
-      # - applications
+      - applications
       - calculations
     ports:
       - "8083:8080"
@@ -27,7 +35,7 @@ services:
       - DB_PASSWORD=test
       - DB_HOST=database
       - CLIENT_HOST=clients
-      # - APPLICATIONS_HOST=applications
+      - APPLICATIONS_HOST=applications
       - CALCULATIONS_HOST=calculations
     networks:
       - bridge
