--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     container_name: applications
     ports:
       - "8084:8080"
+    environment:
+      - EXPENSES_HOST=expenses
     networks:
       - bridge
   calculations:
@@ -34,7 +36,7 @@ services:
       - DB_USER=test
       - DB_PASSWORD=test
       - DB_HOST=database
-      - CLIENT_HOST=clients
+      - CLIENTS_HOST=clients
       - APPLICATIONS_HOST=applications
       - CALCULATIONS_HOST=calculations
     networks:
@@ -54,7 +56,7 @@ services:
       - DB_HOST=database
       - DB_PORT=5432
       - DB_NAME=test
-      - CLIENT_HOST=clients
+      - CLIENTS_HOST=clients
     networks:
       - bridge
   currency:
