--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,7 @@ services:
       - DB_NAME=test
       - CLIENTS_HOST=clients
       - CLIENTS_PORT=8080
+      - CLIENTS_VERSION=v1 
     networks:
       - bridge
   currency:
