--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,26 @@ services:
       - CLIENTS_VERSION=v1 
     networks:
       - bridge
+  interests:
+    build:
+      context: ./interests
+    container_name: interests
+    depends_on:
+      - db
+      - clients
+    ports:
+      - "8086:8080"
+    environment:
+      - DB_USER=test
+      - DB_PASSWORD=test
+      - DB_HOST=database
+      - DB_PORT=5432
+      - DB_NAME=test
+      - CLIENTS_HOST=clients
+      - CLIENTS_PORT=8080
+      - CLIENTS_VERSION=v1 
+    networks:
+      - bridge
   currency:
     build:
       context: ./currency
