--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ script:
   - java -jar karate.jar clients/get-client-test.feature
   - java -jar karate.jar clients/update-client-test.feature
   - java -jar karate.jar loans/pay-loans-test.feature
-  - java -jar karate.jar get-expenses-test.feature
+  - java -jar karate.jar expenses/get-expenses-test.feature
   - cd ..
   - 'x=`ls data/sql | wc -l`; while [ $x -gt 0 ]; do docker-compose run migrate down; x=$(($x-1)); done'
   - docker-compose down
